<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Spendo</string>

    <!--Intro slider-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Spendo\n Spend tracking app</string>
    <string name="slide_1_desc">Record everything you earn and spend.</string>

    <string name="slide_2_title">Categorize every spend</string>
    <string name="slide_2_desc">Tag your spends with different categories to keep a track of where you are spending more.</string>

    <string name="slide_3_title">Set monthly limits</string>
    <string name="slide_3_desc">Set monthly limits on your spend categories to save more.</string>

    <!--HomeActivity-->
    <string name="title_activity_home">Spendo</string>
    <string name="fab_title">New Transaction</string>
    <string name="overflow_icon">Overflow Icon</string>
    <string name="amount" translatable="false">\u20B9 %.2f</string>

    <!--NewTransactionActivity-->
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="title_new_transaction">Fill in the details</string>
    <string name="amount_hint">Amount</string>
    <string name="credit_choice">Credit</string>
    <string name="debit_choice">Debit</string>
    <string name="category_section_heading">Choose Category</string>
    <string name="notes_hint">Notes(optional)</string>
    <string name="date_placeholder">Date</string>

    <!--BottomDrawerNavigationMenu Items-->
    <string name="item_transaction">Transactions</string>
    <string name="item_category">Categories</string>
    <string name="item_settings">Settings</string>
    <string name="item_feedback">Send Feedback</string>
    <string name="item_share">Share this app</string>

    <string name="rupee_symbol" translatable="false">\u20B9</string>

    <string name="default_amount" translatable="false">\u20B9 00.00</string>

    <!--CategoryDisplayActivity -->
    <string name="fab_title_category">Add New Category</string>
    <string name="limit_edit_dialog_title">Update Limit</string>
    <string name="limit_edit_dialog_positive">Update</string>
    <string name="limit_edit_dialog_negative">Cancel</string>
    <string name="limit_edit_dialog_hint">Spend limit</string>
    <string name="add_category_dialog_title">Add new category</string>
    <string name="add_category_dialog_name_hint">Category Name</string>
    <string name="add_category_dialog_positive">Add</string>
    <string name="add_category_dialog_negative">Cancel</string>


    <!--ViewTransactionActivity -->
    <string name="category_label">Category</string>
    <string name="date_label">Date</string>
    <string name="notes_label">Notes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this transaction?</string>
    <string name="delete_positive_action">Delete</string>
    <string name="delete_negative_action">Cancel</string>


    <string name="screen_title_general">General</string>
    <string name="key_screen_title_general">general_screen</string>

    <string name="screen_title_notifications">Notifications and Alerts</string>
    <string name="key_screen_title_notifications">notification_screen</string>

    <string name="screen_title_backup">Backup &amp; Restore</string>
    <string name="key_screen_title_backup">backup_screen</string>

    <string name="screen_title_about">About</string>
    <string name="key_screen_title_about">about</string>

    <!--SettingsPref keys, tittle & summary -->
    <string name="title_activity_settings">Settings</string>
    <string name="key_daily_add_reminder" translatable="false">daily_add_reminder</string>
    <string name="title_daily_add_reminder">Daily Reminder</string>
    <string name="summary_daily_add_reminder">Get daily reminder to add transactions for the day.</string>

    <string name="key_remind_time" translatable="false">remind_time</string>
    <string name="title_remind_time">Reminder Time</string>
    <string name="summary_remind_time">Time to get add reminder. Default: 9:00 P.M</string>

    <string name="key_feature_reminder">feature_reminder</string>
    <string name="title_feature_reminder">New Features</string>
    <string name="summary_feature_reminder">Get updates on new features</string>


    <string name="key_backup_device" translatable="false">backup_device</string>
    <string name="title_backup_device">Device Backup</string>
    <string name="summary_backup_device">Back up daily on you device. You can also manage Google Drive backups below.</string>

    <string name="key_backup_drive" translatable="false">backup_drive</string>
    <string name="title_backup_drive">Backup to Google Drive</string>
    <string name="summary_backup_drive">Backup to Google Drive automatically</string>

    <string name="key_backup_drive_freq" translatable="false">backup_drive_freq</string>
    <string name="title_backup_drive_freq">Frequency</string>
    <string name="default_backup_drive_freq">manual</string>

    <string name="key_backup_drive_wifi" translatable="false">backup_drive_wifi</string>
    <string name="title_backup_drive_wifi">Wi-Fi only</string>
    <string name="summary_backup_drive_wifi">Data charges may apply if this is off</string>

    <string name="key_custom_backup" translatable="false">backup</string>
    <string name="backup_btn">Backup Now</string>

    <string name="key_custom_restore" translatable="false">backup</string>
    <string name="restore_btn">Restore Last Backup</string>

    <string name="key_custom_reset" translatable="false">reset</string>
    <string name="title_custom_reset">Reset(Will clear all data)</string>
    <string name="reset_btn">Reset</string>


    <string name="title_activity_edit_transaction">Edit Transaction</string>

    <!--fragment overflow-->
    <string name="sort_by_heading">Sort by</string>
    <string name="sort_by_date">Date</string>

    <string name="filter_heading">Filter by</string>
    <string name="filter_credit">Credit</string>
    <string name="filter_debit">Debit</string>
    <string name="filter_category" tools:keep="@string/filter_category">Category</string>
    <string name="filter_date">Date</string>
    <string name="filter_month">Month</string>


    <string name="accessibility_done_fab">Add transaction</string>
    <string name="accessibility_list_transactions">List of transactions</string>
    <string name="rupee_symbol_text">Rupee symbol</string>

    <string name="reset_dialog_title">Reset</string>
    <string name="reset_dialog_message">Are you sure you want to reset? It will erase all your transactions.</string>
    <string name="reset_dialog_positive">Reset</string>
    <string name="reset_dialog_negative">Cancel</string>

    <string name="share_link">http://bit.ly/spendo</string>
    <string name="share_text">Want to know where you spend your money?? Install this app.</string>


    <string name="app_desc">Spendo makes managing all cash transactions easy. Easily manage all your cash, track all your transactions, tag your transactions under different categories, set monthly limits to control your transactions and save more cash.\n\n Features:\n- Tag all your spends.\n- Set monthly spend limits\n- Get a reminder every day to add the day\'s transaction.\n- Add transaction specific notes.\n- Sort transactions.\n- Filter transactions.\n\nUpcoming Features:\n- Backup/Restore your spends to Device/Google Drive.\n- Ability to view charts &amp; graphs to understand your spends better.\n- More ways to filter and sort.\n</string>

</resources>
