<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="0">

    <PreferenceScreen
        android:key="@string/key_screen_title_general"
        android:title="@string/screen_title_general">


        <PreferenceCategory>
            <Preference
                android:key="@string/key_custom_reset"
                android:layout="@layout/reset_pref"
                android:title="@string/title_custom_reset" />
        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="@string/key_screen_title_notifications"
        android:title="@string/screen_title_notifications">

        <PreferenceCategory android:title="Add transaction reminder">
            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_daily_add_reminder"
                android:summary="@string/summary_daily_add_reminder"
                android:title="@string/title_daily_add_reminder" />

            <!--suppress AndroidElementNotAllowed -->
            <me.pushkaranand.spendo.custom.TimePreference
                android:defaultValue="1260"
                android:dependency="@string/key_daily_add_reminder"
                android:key="@string/key_remind_time"
                android:summary="@string/summary_remind_time"
                android:title="@string/title_remind_time" />
        </PreferenceCategory>
        <PreferenceCategory android:title="Others">
            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_feature_reminder"
                android:summary="@string/summary_feature_reminder"
                android:title="@string/title_feature_reminder" />
        </PreferenceCategory>

    </PreferenceScreen>

    <!--<PreferenceScreen
        android:key="@string/key_screen_title_backup"
        android:title="@string/screen_title_backup">

        <PreferenceCategory android:title="Device Backup">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_backup_device"
                android:summary="@string/summary_backup_device"
                android:title="@string/title_backup_device" />

        </PreferenceCategory>
        <PreferenceCategory android:title="Google Drive Backup">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_backup_drive"
                android:summary="@string/summary_backup_drive"
                android:title="@string/title_backup_drive" />

            <ListPreference
                android:defaultValue="@string/default_backup_drive_freq"
                android:dependency="@string/key_backup_drive"
                android:dialogTitle="@string/title_backup_drive_freq"
                android:entries="@array/entries_backup_drive_freq"
                android:entryValues="@array/entry_values_backup_drive_freq"
                android:key="@string/key_backup_drive_freq"
                android:title="@string/title_backup_drive_freq" />

            <SwitchPreference
                android:defaultValue="true"
                android:dependency="@string/key_backup_drive"
                android:key="@string/key_backup_drive_wifi"
                android:summary="@string/summary_backup_drive_wifi"
                android:title="@string/title_backup_drive_wifi" />

        </PreferenceCategory>

        <PreferenceCategory>
            <Preference
                android:key="@string/key_custom_backup"
                android:layout="@layout/backup_pref_btn" />
            <Preference
                android:key="@string/key_custom_restore"
                android:layout="@layout/restore_pref_btn" />
        </PreferenceCategory>

    </PreferenceScreen>-->

    <PreferenceScreen
        android:key="@string/key_screen_title_about"
        android:title="@string/screen_title_about">


    </PreferenceScreen>


</PreferenceScreen>