<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/ui"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_money_black"
            android:title="@string/item_transaction" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories_black"
            android:title="@string/item_category" />
    </group>

    <group
        android:id="@+id/con"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/item_settings" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black"
            android:title="@string/item_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black"
            android:title="@string/item_share" />
    </group>
</menu>